# charon

./: .gitignore  Makefile  charon.spec  setup.cfg  setup.py
charon/: config.py  constants.py  storage.py
charon/cmd/: __init__.py  command.py
charon/pkgs/: indexing.py  maven.py  npm.py  pkg_utils.py
charon/template/: __init__.py  maven-index.html.j2  npm-index.html.j2
charon/utils/: __init__.py  archive.py  files.py  logs.py
tests/: base.py  test_manifest_upload.py  test_maven_del.py  test_maven_index.py  test_maven_meta.py  test_maven_upload.py  test_npm_index.py  test_npm_upload.py  test_s3client.py
