
[metadata]

name = charon
version = 1.1.0
description = Red Hat Ronda uploader

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/CommonJava/charon

project_urls =
  Source = https://github.com/CommonJava/charon
  Bug Reports = https://github.com/CommonJava/charon/issues

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools
  Topic :: Utilities


[aliases]
test = nosetests


[tox:tox]
envlist = flake8,mypy,py{36,37,38,39,310},coverage,bandit
skip_missing_interpreters = true


[testenv]
setenv =
  COVERAGE_FILE = .coverage.{envname}
