# This file defines the general configuration for the charon
# wheel, and the tools tox, nose, flake8, coverage, bandit


[metadata]

name = charon
version = 1.1.0
description = Red Hat Ronda uploader

keywords = charon ronda mrrc maven npm java

license = Apache License v2 (APLv2)
license_file = LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/Commonjava/charon

platform = any

project_urls =
  Source = https://github.com/Commonjava/charon
  Bug Reports = https://github.com/Commonjava/charon/issues

classifiers =
  Development Status :: 1 - Planning
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3
  Topic :: Utilities


[aliases]

test = nosetests


[tox:tox]
envlist = flake8,mypy,py{36,37,38,39,310},coverage,bandit
skip_missing_interpreters = true


[testenv]
setenv =
  COVERAGE_FILE = .coverage.{envname}

commands =
  coverage run -m nose

sitepackages = false

deps =
  boto3_type_annotations
  coverage
  docutils
  mock
  moto
  nose

download = true


[testenv:bandit]

basepython = python

commands =
  python -B -m bandit --ini setup.cfg -qr charon/

deps =
  bandit


[testenv:flake8]

basepython = python

commands =
  python -B -m flake8 charon

deps =
  flake8


[testenv:mypy]

basepython = python

commands =
  python -B -m mypy charon

deps =
  mypy
  types-pkg_resources
  types-requests
  typing_extensions


[testenv:coverage]
# this is just here to combine the coverage output

setenv =
  COVERAGE_FILE = .coverage

basepython = python

commands =
  coverage combine
  coverage report
  coverage html


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


[coverage:run]

include =
  charon/*

omit =
  *.pyi


[coverage:report]

exclude_lines =
  \.\.\.
  pass
  pragma: no cover
  @abstract


[bandit]
# B101 complains about asserts
# B303 complains about SHA1 and MD5

skips = B101,B303


[flake8]
# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator

ignore = E303,E731,E741,F401,F812,W504

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


[mypy]
no_site_packages = False
ignore_missing_imports = True
strict_optional = False
mypy_path = stubs/


#
# The end.
